--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import pandas as pd\n",
     "import opendatasets as od"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +28,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 13.7k/13.7k [00:00<00:00, 93.2kB/s]"
+      "100%|██████████| 13.7k/13.7k [00:00<00:00, 93.5kB/s]"
      ]
     },
     {
@@ -46,12 +47,12 @@
     }
    ],
    "source": [
-    "od.download(\"https://www.kaggle.com/chirin/africa-economic-banking-and-systemic-crisis-data?select=african_crises.csv\")\n"
+    "od.download(\"https://www.kaggle.com/chirin/africa-economic-banking-and-systemic-crisis-data?select=african_crises.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -112,23 +113,32 @@
        "[1059 rows x 14 columns]>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv(\"/Users/wilfredshammah/nyu/Africa-Economic-Crisis-Analysis/africa-economic-banking-and-systemic-crisis-data/african_crises.csv\")\n",
-    "data.head"
+    "q = pd.read_csv(\"/Users/wilfredshammah/nyu/Africa-Economic-Crisis-Analysis/africa-economic-banking-and-systemic-crisis-data/african_crises.csv\")\n",
+    "q.headcjgc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q.headers"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3.9.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -142,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
