restore visualization code

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -2,17 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import pandas as pd\n",
-    "import opendatasets as od"
+    "import opendatasets as od\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -742,6 +746,147 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(data.dtypes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.style.use('seaborn')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "country = data.country.unique()\n",
+    "country"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Time series plot for annual inflation cpi\n",
+    "plt.style.use('seaborn')\n",
+    "plt.figure(figsize=(20,30))\n",
+    "count = 0\n",
+    "#color =\"#\"+''.join([random.choice('0123456789ABCDEF') for j in range(6)])\n",
+    "colors = ['#000000','#0000FF','#CD0000','#8A2BE2','#A52A2A',\n",
+    "               '#458B00','#6495ED','#CD1076','#8B7500','#68838B','#20B2AA',\n",
+    "               '#FF8000','#8B668B']\n",
+    "\n",
+    "for c in country:\n",
+    "    plt.subplot(7,2,1+count) \n",
+    "    col = colors[count]\n",
+    "    count +=1\n",
+    "    \n",
+    "    sns.lineplot(x=data[data.country == c]['year'], \n",
+    "                 y=data[data.country == c]['inflation_annual_cpi'],\n",
+    "                    color = col, label=c)\n",
+    "    plt.scatter(x=data[data.country == c]['year'],\n",
+    "                y=data[data.country == c]['inflation_annual_cpi'],\n",
+    "                    color = col, s=30)  \n",
+    "    plt.title(\"Time Series: Inflation Annual CPI for \"+ c) \n",
+    "    plt.legend()\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Visualization of different crises for each country\n",
+    "chart=['systemic_crisis','domestic_debt_in_default',\n",
+    "      'sovereign_external_debt_default','currency_crises',\n",
+    "      'inflation_crises','banking_crisis']\n",
+    "plt.figure(figsize=(20,20))\n",
+    "count = 0\n",
+    "for value in chart:\n",
+    "      plt.subplot(3,2, count+1)\n",
+    "      count +=1\n",
+    "      sns.countplot(y=data.country, hue=data[value])\n",
+    "      plt.legend(loc=0)\n",
+    "      plt.title(value +' for each Country')\n",
+    "      plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Exchange rate and curreny crisis for each country showing independence year\n",
+    "sns.set(style='whitegrid')\n",
+    "plt.figure(figsize=(20,30))\n",
+    "count = 0\n",
+    "for c in country:\n",
+    "    plt.subplot(7, 2, count+1)\n",
+    "    count +=1\n",
+    "    plt.scatter(x=data.year[(data.country == c) & (data.currency_crises == 1)],\n",
+    "                y=data.exch_usd[(data.country == c) & (data.currency_crises == 1)], \n",
+    "                c='#CD0000', label='Currency Crisis')\n",
+    "    plt.scatter(x=data.year[(data.country == c) & (data.currency_crises == 0)],\n",
+    "                y=data.exch_usd[(data.country == c) & (data.currency_crises == 0)], \n",
+    "                c='#20B2AA', label='No Currency Crisis')\n",
+    "    # plt.scatter(x=data.year[(data.country == c) & (data.currency_crises == 2)],\n",
+    "    #             y=data.exch_usd[(data.country == c) & (data.currency_crises == 2)], \n",
+    "    #             c='#8B7500', label='No Currency Crisis')\n",
+    "    plt.plot([np.min(data[np.logical_and(data.country==c,data.independence==1)]['year']),\n",
+    "              np.min(data[np.logical_and(data.country==c,data.independence==1)]['year'])],\n",
+    "             [0, np.max(data[data.country==c]['exch_usd'])],\n",
+    "             color='blue',\n",
+    "             linestyle='dotted',\n",
+    "             alpha=0.8)\n",
+    "    \n",
+    "    plt.text(np.min(data[np.logical_and(data.country==c,data.independence==1)]['year']),\n",
+    "             np.max(data[data.country==c]['exch_usd'])/2,\n",
+    "             'Independence',\n",
+    "             rotation=-90)\n",
+    "    plt.scatter(x=np.min(data[np.logical_and(data.country==c,data.independence==1)]['year']),\n",
+    "                y=0,\n",
+    "                s=50)\n",
+    "    \n",
+    "    plt.xticks()\n",
+    "    #plt.grid()\n",
+    "    plt.xlabel('Year')\n",
+    "    plt.ylabel('Exchange Rate')\n",
+    "    plt.title('Exchange rate and Currency Crisis for '+ c)\n",
+    "    plt.legend()\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -763,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
