--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -753,7 +753,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(data.dtypes)\n"
+    "print(data.dtypes)\n",
+    "\n"
    ]
   },
   {
@@ -786,8 +787,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "#Time series plot for annual inflation cpi\n",
     "plt.style.use('seaborn')\n",
